--- a/src/components/status/status.css
+++ b/src/components/status/status.css
@@ -1,7 +1,7 @@
 .status {
-  width: 200px;
-  height: 100px;
-  margin-top: 10px;
+  width: 300px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .turn-title {
@@ -14,4 +14,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.player {
+  opacity: 0.7;
+}
+
+.player.active {
+  opacity: 1;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #e1e1e1;
+}
+
+.game-over {
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.game-over .title {
+  font-size: 50px;
 }
